--- a/dashboard.html
+++ b/dashboard.html
@@ -1,130 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF‑8"/>
-  <meta name="viewport" content="width=device‑width,initial‑scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CRM Dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap">
   <style>
-    body { background:#f4f8fb; font-family:'Poppins', sans-serif; }
-    nav.sidebar { width:250px; }
-    .status-badge { text-transform: capitalize; }
-    .tag-pill { margin:2px 4px 2px 0; padding:2px 6px; background:#e0e0e0; border-radius:4px; font-size:12px; display:inline-block;}
+    /* Reset and base styles */
+    body, h1, h2, h3, p, ul, li {
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+    }
+    body {
+      background-color: #f4f8fb;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
+    header {
+      background-color: #fff;
+      padding: 15px 40px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo {
+      font-size: 20px;
+      font-weight: 700;
+      color: #0d47a1;
+    }
+    .container {
+      display: flex;
+      flex: 1;
+    }
+    nav.sidebar {
+      width: 220px;
+      background-color: #fff;
+      min-height: 100vh;
+      padding: 20px 10px;
+    }
+    nav.sidebar a, nav.sidebar button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      font-weight: 500;
+      color: #333;
+      text-align: left;
+      border: none;
+      background: none;
+      cursor: pointer;
+    }
+    nav.sidebar a:hover, nav.sidebar button:hover {
+      background-color: #eceff1;
+    }
+    .main {
+      flex: 1;
+      padding: 20px;
+    }
+    .cards {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+    .card {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 6px;
+      flex: 1;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background-color: #fff;
+      border-radius: 6px;
+      overflow: hidden;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+    th, td {
+      padding: 12px 15px;
+      border-bottom: 1px solid #eee;
+      font-size: 14px;
+    }
+    th {
+      background-color: #fafafa;
+      text-align: left;
+    }
+    tr:last-child td {
+      border-bottom: none;
+    }
+    .btn {
+      padding: 8px 14px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      background-color: #0d47a1;
+      color: #fff;
+    }
+    .btn:hover {
+      background-color: #1565c0;
+    }
+    #modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      display: none;
+      justify-content: center;
+      align-items: center;
+    }
+    #modal .dialog {
+      background: #fff;
+      padding: 20px;
+      border-radius: 6px;
+      width: 320px;
+    }
+    #modal input, #modal select {
+      width: 100%;
+      margin: 8px 0;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
-<div class="d-flex">
-  <nav class="sidebar bg-white vh-100 p-3 border-end">
-    <button id="btnCreate" class="btn btn-primary w-100 mb-3">+ New Task</button>
-    <ul class="nav flex-column">
-      <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Wiki Book</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Customers</a></li>
-      <li class="nav-item">
-        <a class="nav-link d-flex justify-content-between align-items-center" href="#">
-          Chat <span class="badge bg-primary">0</span>
-        </a>
-      </li>
-      <li class="nav-item"><a class="nav-link active" href="#">Tasks</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Leads</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
-    </ul>
-  </nav>
-  <main class="flex-fill p-4">
-    <div class="row mb-4">
-      <div class="col"><div class="card p-3 text-center"><strong>Not Started</strong><div id="countNotStarted">0</div></div></div>
-      <div class="col"><div class="card p-3 text-center"><strong>In Progress</strong><div id="countInProgress">0</div></div></div>
-      <div class="col"><div class="card p-3 text-center"><strong>Testing</strong><div id="countTesting">0</div></div></div>
-      <div class="col"><div class="card p-3 text-center"><strong>Awaiting Feedback</strong><div id="countAwaiting">0</div></div></div>
-      <div class="col"><div class="card p-3 text-center"><strong>Complete</strong><div id="countComplete">0</div></div></div>
-    </div>
-    <div class="table-responsive bg-white rounded shadow-sm">
-      <table class="table mb-0">
-        <thead class="table-light">
-          <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Assigned</th><th>Tags</th><th>Priority</th><th>Actions</th></tr>
+  <header>
+    <div class="logo">CRM Dashboard</div>
+  </header>
+  <div class="container">
+    <nav class="sidebar">
+      <button onclick="openModal()">+ New Task</button>
+      <a href="#">Dashboard</a>
+      <a href="#">Tasks</a>
+      <a href="#">Leads</a>
+      <a href="#">Inbox</a>
+      <a href="#">Settings</a>
+    </nav>
+    <div class="main">
+      <div class="cards">
+        <div class="card">Not Started<br><strong id="count-new">0</strong></div>
+        <div class="card">In Progress<br><strong id="count-progress">0</strong></div>
+        <div class="card">Testing<br><strong id="count-testing">0</strong></div>
+        <div class="card">Complete<br><strong id="count-complete">0</strong></div>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Client</th>
+            <th>Status</th>
+            <th>Start Date</th>
+            <th>Due Date</th>
+            <th>Priority</th>
+          </tr>
         </thead>
-        <tbody id="taskBody"><tr><td colspan="9" class="text-center py-4">No tasks</td></tr></tbody>
+        <tbody id="taskTable">
+          <tr><td colspan="6" style="text-align:center;">No tasks yet</td></tr>
+        </tbody>
       </table>
     </div>
-  </main>
-</div>
+  </div>
 
-<!-- Modal -->
-<div class="modal fade" id="taskModal" tabindex="-1">
-  <div class="modal-dialog"><div class="modal-content">
-    <div class="modal-header"><h5>Create Task</h5><button class="btn-close" data-bs-dismiss="modal"></button></div>
-    <div class="modal-body">
-      <input id="taskName" class="form-control mb-2" placeholder="Task Name"/>
-      <input type="date" id="taskStart" class="form-control mb-2"/>
-      <input type="date" id="taskDue" class="form-control mb-2"/>
-      <select id="taskStatus" class="form-select mb-2">
-        <option>Not Started</option><option>In Progress</option><option>Testing</option><option>Awaiting Feedback</option><option>Complete</option>
+  <div id="modal">
+    <div class="dialog">
+      <h3>Create Task</h3>
+      <input type="text" id="taskName" placeholder="Client Name" />
+      <input type="date" id="taskStart" />
+      <input type="date" id="taskDue" />
+      <select id="taskStatus">
+        <option value="new">Not Started</option>
+        <option value="progress">In Progress</option>
+        <option value="testing">Testing</option>
+        <option value="complete">Complete</option>
       </select>
-      <input id="taskAssigned" class="form-control mb-2" placeholder="Assigned to"/>
-      <input id="taskTags" class="form-control mb-2" placeholder="Tags (comma‑separated)"/>
-      <select id="taskPriority" class="form-select mb-2"><option>Low</option><option>Medium</option><option>High</option><option>Urgent</option></select>
+      <select id="taskPriority">
+        <option>Low</option>
+        <option>Medium</option>
+        <option>High</option>
+      </select>
+      <button onclick="addTask()" class="btn">Save</button>
+      <button onclick="closeModal()" class="btn" style="background:#aaa;margin-left:6px;">Cancel</button>
     </div>
-    <div class="modal-footer">
-      <button id="saveTask" class="btn btn-primary">Save</button>
-      <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-    </div>
-  </div></div>
-</div>
+  </div
+::contentReference[oaicite:0]{index=0}
+ <script>
+      let tasks = [];
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  const tasks = [];
-  function updateSummary() {
-    const counts = { "Not Started":0, "In Progress":0, "Testing":0, "Awaiting Feedback":0, "Complete":0 };
-    tasks.forEach(t => counts[t.status]++);
-    document.getElementById('countNotStarted').textContent = counts["Not Started"];
-    document.getElementById('countInProgress').textContent = counts["In Progress"];
-    document.getElementById('countTesting').textContent = counts["Testing"];
-    document.getElementById('countAwaiting').textContent = counts["Awaiting Feedback"];
-    document.getElementById('countComplete').textContent = counts["Complete"];
-  }
-  function renderTasks() {
-    const body = document.getElementById('taskBody');
-    body.innerHTML = "";
-    if (!tasks.length) {
-      body.innerHTML = '<tr><td colspan="9" class="text-center py-4">No tasks</td></tr>';
-      return;
-    }
-    tasks.forEach((t,i) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = \`
-        <td>\${i+1}</td>
-        <td>\${t.name}</td>
-        <td><span class="badge bg-info status-badge">\${t.status}</span></td>
-        <td>\${t.start}</td><td>\${t.due}</td>
-        <td>\${t.assigned}</td>
-        <td>\${t.tags.split(',').map(x=>'<span class="tag-pill">'+x.trim()+'</span>').join('')}</td>
-        <td>\${t.priority}</td>
-        <td><button class="btn btn-sm btn-outline-primary">Edit</button></td>\`;
-      body.appendChild(tr);
-    });
-  }
-  document.getElementById('btnCreate').onclick = () => new bootstrap.Modal(document.getElementById('taskModal')).show();
-  document.getElementById('saveTask').onclick = () => {
-    const t = {
-      name: taskName.value.trim(),
-      start: taskStart.value,
-      due: taskDue.value,
-      status: taskStatus.value,
-      assigned: taskAssigned.value,
-      tags: taskTags.value,
-      priority: taskPriority.value
-    };
-    if (!t.name || !t.start || !t.due) return alert('All required fields must be filled');
-    tasks.push(t);
-    updateSummary();
-    renderTasks();
-    bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
-  };
-  updateSummary();
-  renderTasks();
-</script>
-</body>
+      function openModal() {
+        document.getElementById("modal").style.display = "flex";
+      }
+
+      function closeModal() {
+        document.getElementById("modal").style.display = "none";
+      }
+
+      function addTask() {
+        const name = document.getElementById("taskName").value.trim();
+        const start = document.getElementById("taskStart").value;
+        const due = document.getElementById("taskDue").value;
+        const status = document.getElementById("taskStatus").value;
+        const priority = document.getElementById("taskPriority").value;
+
+        if (!name || !start || !due) {
+          alert("Please fill in all fields.");
+          return;
+        }
+
+        const task = {
+          id: Date.now(),
+          name,
+          start,
+          due,
+          status,
+          priority,
+        };
+
+        tasks.push(task);
+        renderTasks();
+        updateTaskCounts();
+        closeModal();
+      }
+
+      function renderTasks() {
+        const table = document.getElementById("taskTable");
+        table.innerHTML = tasks
+          .map(
+            (task, index) => `
+            <tr>
+              <td>${index + 1}</td>
+              <td>${task.name}</td>
+              <td>${task.status}</td>
+              <td>${task.start}</td>
+              <td>${task.due}</td>
+              <td>${task.priority}</td>
+            </tr>`
+          )
+          .join("");
+      }
+
+      function updateTaskCounts() {
+        const counts = {
+          new: 0,
+          progress: 0,
+          testing: 0,
+          complete: 0,
+        };
+
+        tasks.forEach((task) => {
+          counts[task.status]++;
+        });
+
+        document.getElementById("count-new").textContent = counts.new;
+        document.getElementById("count-progress").textContent = counts.progress;
+        document.getElementById("count-testing").textContent = counts.testing;
+        document.getElementById("count-complete").textContent = counts.complete;
+      }
+    </script>
+  </body>
 </html>
