--- a/dashboard.html
+++ b/dashboard.html
@@ -2,139 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CRM Dashboard</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap">
   <style>
-    /* Reset and base styles */
-    body, h1, h2, h3, p, ul, li {
-      margin: 0;
-      padding: 0;
-      font-family: 'Poppins', sans-serif;
-    }
-    body {
-      background-color: #f4f8fb;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-    header {
-      background-color: #fff;
-      padding: 15px 40px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .logo {
-      font-size: 20px;
-      font-weight: 700;
-      color: #0d47a1;
-    }
-    .container {
-      display: flex;
-      flex: 1;
-    }
-    nav.sidebar {
-      width: 220px;
-      background-color: #fff;
-      min-height: 100vh;
-      padding: 20px 10px;
-    }
-    nav.sidebar a, nav.sidebar button {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      font-weight: 500;
-      color: #333;
-      text-align: left;
-      border: none;
-      background: none;
-      cursor: pointer;
-    }
-    nav.sidebar a:hover, nav.sidebar button:hover {
-      background-color: #eceff1;
-    }
-    .main {
-      flex: 1;
-      padding: 20px;
-    }
-    .cards {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 20px;
-    }
-    .card {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 6px;
-      flex: 1;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: #fff;
-      border-radius: 6px;
-      overflow: hidden;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    }
-    th, td {
-      padding: 12px 15px;
-      border-bottom: 1px solid #eee;
-      font-size: 14px;
-    }
-    th {
-      background-color: #fafafa;
-      text-align: left;
-    }
-    tr:last-child td {
-      border-bottom: none;
-    }
-    .btn {
-      padding: 8px 14px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      background-color: #0d47a1;
-      color: #fff;
-    }
-    .btn:hover {
-      background-color: #1565c0;
-    }
-    #modal {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      display: none;
-      justify-content: center;
-      align-items: center;
-    }
-    #modal .dialog {
-      background: #fff;
-      padding: 20px;
-      border-radius: 6px;
-      width: 320px;
-    }
-    #modal input, #modal select {
-      width: 100%;
-      margin: 8px 0;
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 14px;
-    }
+    body, h1, h2, ul, li { margin:0; padding:0; font-family:'Poppins', sans-serif; }
+    body { background:#f4f8fb; color:#333; display:flex; flex-direction:column; min-height:100vh; }
+    header { background:#fff; padding:15px 40px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
+    .logo { font-size:20px; font-weight:700; color:#0d47a1; }
+    .container { display:flex; flex:1; }
+    nav.sidebar { width:220px; background:#fff; padding:20px; }
+    nav.sidebar button, nav.sidebar a { width:100%; text-align:left; padding:10px; font-weight:500; border:none; background:none; cursor:pointer; color:#333; }
+    nav.sidebar button:hover, nav.sidebar a:hover { background:#eceff1; }
+    .main { flex:1; padding:20px; }
+    .cards { display:flex; gap:20px; margin-bottom:20px; }
+    .card { background:#fff; padding:20px; flex:1; text-align:center; border-radius:6px; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
+    table { width:100%; border-collapse:collapse; background:#fff; border-radius:6px; overflow:hidden; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
+    th, td { padding:12px; border-bottom:1px solid #eee; font-size:14px; }
+    th { background:#fafafa; }
+    tr:last-child td { border-bottom:none; }
+    .btn { padding:8px 14px; background:#0d47a1; color:#fff; border:none; border-radius:4px; cursor:pointer; }
+    .btn:hover { background:#1565c0; }
+    #modal { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.4); display:none; justify-content:center; align-items:center; }
+    #modal .dialog { background:#fff; padding:20px; width:320px; border-radius:6px; }
+    #modal input, #modal select { width:100%; margin:8px 0; padding:8px; border:1px solid #ccc; border-radius:4px; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo">CRM Dashboard</div>
-  </header>
+  <header><div class="logo">CRM Dashboard</div></header>
   <div class="container">
     <nav class="sidebar">
       <button onclick="openModal()">+ New Task</button>
@@ -149,22 +45,14 @@
         <div class="card">Not Started<br><strong id="count-new">0</strong></div>
         <div class="card">In Progress<br><strong id="count-progress">0</strong></div>
         <div class="card">Testing<br><strong id="count-testing">0</strong></div>
+        <div class="card">Awaiting Feedback<br><strong id="count-await">0</strong></div>
         <div class="card">Complete<br><strong id="count-complete">0</strong></div>
       </div>
       <table>
         <thead>
-          <tr>
-            <th>#</th>
-            <th>Client</th>
-            <th>Status</th>
-            <th>Start Date</th>
-            <th>Due Date</th>
-            <th>Priority</th>
-          </tr>
+          <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Priority</th></tr>
         </thead>
-        <tbody id="taskTable">
-          <tr><td colspan="6" style="text-align:center;">No tasks yet</td></tr>
-        </tbody>
+        <tbody id="taskTable"><tr><td colspan="6" style="text-align:center;">No tasks</td></tr></tbody>
       </table>
     </div>
   </div>
@@ -172,97 +60,71 @@
   <div id="modal">
     <div class="dialog">
       <h3>Create Task</h3>
-      <input type="text" id="taskName" placeholder="Client Name" />
+      <input type="text" id="taskName" placeholder="Task Name" />
       <input type="date" id="taskStart" />
       <input type="date" id="taskDue" />
       <select id="taskStatus">
         <option value="new">Not Started</option>
         <option value="progress">In Progress</option>
         <option value="testing">Testing</option>
+        <option value="await">Awaiting Feedback</option>
         <option value="complete">Complete</option>
       </select>
       <select id="taskPriority">
-        <option>Low</option>
-        <option>Medium</option>
-        <option>High</option>
+        <option>Low</option><option>Medium</option><option>High</option><option>Urgent</option>
       </select>
-      <button onclick="addTask()" class="btn">Save</button>
-      <button onclick="closeModal()" class="btn" style="background:#aaa;margin-left:6px;">Cancel</button>
+      <div style="text-align:right;">
+        <button onclick="addTask()" class="btn">Save</button>
+        <button onclick="closeModal()" class="btn" style="background:#aaa;margin-left:5px;">Cancel</button>
+      </div>
     </div>
-  </div
-::contentReference[oaicite:0]{index=0}
- <script>
-      let tasks = [];
+  </div>
 
-      function openModal() {
-        document.getElementById("modal").style.display = "flex";
-      }
+  <script>
+    let tasks = [];
 
-      function closeModal() {
-        document.getElementById("modal").style.display = "none";
-      }
-
-      function addTask() {
-        const name = document.getElementById("taskName").value.trim();
-        const start = document.getElementById("taskStart").value;
-        const due = document.getElementById("taskDue").value;
-        const status = document.getElementById("taskStatus").value;
-        const priority = document.getElementById("taskPriority").value;
-
-        if (!name || !start || !due) {
-          alert("Please fill in all fields.");
-          return;
-        }
-
-        const task = {
-          id: Date.now(),
-          name,
-          start,
-          due,
-          status,
-          priority,
-        };
-
-        tasks.push(task);
-        renderTasks();
-        updateTaskCounts();
-        closeModal();
-      }
-
-      function renderTasks() {
-        const table = document.getElementById("taskTable");
-        table.innerHTML = tasks
-          .map(
-            (task, index) => `
-            <tr>
-              <td>${index + 1}</td>
-              <td>${task.name}</td>
-              <td>${task.status}</td>
-              <td>${task.start}</td>
-              <td>${task.due}</td>
-              <td>${task.priority}</td>
-            </tr>`
-          )
-          .join("");
-      }
-
-      function updateTaskCounts() {
-        const counts = {
-          new: 0,
-          progress: 0,
-          testing: 0,
-          complete: 0,
-        };
-
-        tasks.forEach((task) => {
-          counts[task.status]++;
-        });
-
-        document.getElementById("count-new").textContent = counts.new;
-        document.getElementById("count-progress").textContent = counts.progress;
-        document.getElementById("count-testing").textContent = counts.testing;
-        document.getElementById("count-complete").textContent = counts.complete;
-      }
-    </script>
-  </body>
+    function openModal() {
+      document.getElementById("modal").style.display = "flex";
+    }
+    function closeModal() {
+      document.getElementById("modal").style.display = "none";
+    }
+    function addTask() {
+      const name = document.getElementById("taskName").value.trim();
+      const start = document.getElementById("taskStart").value;
+      const due = document.getElementById("taskDue").value;
+      const status = document.getElementById("taskStatus").value;
+      const priority = document.getElementById("taskPriority").value;
+      if (!name || !start || !due) return alert("Fill all fields");
+      tasks.push({ name, start, due, status, priority });
+      renderTasks();
+      updateCounts();
+      closeModal();
+      document.getElementById("taskName").value = "";
+    }
+    function renderTasks() {
+      const tbody = document.getElementById("taskTable");
+      if (!tasks.length) return (tbody.innerHTML = '<tr><td colspan="6" style="text-align:center;">No tasks</td></tr>');
+      tbody.innerHTML = tasks.map((t,i) => `
+        <tr>
+          <td>${i+1}</td>
+          <td>${t.name}</td>
+          <td>${t.status}</td>
+          <td>${t.start}</td>
+          <td>${t.due}</td>
+          <td>${t.priority}</td>
+        </tr>`).join("");
+    }
+    function updateCounts() {
+      const counts = { new:0, progress:0, testing:0, await:0, complete:0 };
+      tasks.forEach(t => counts[t.status] ? counts[t.status]++ : null);
+      document.getElementById("count-new").textContent = counts.new;
+      document.getElementById("count-progress").textContent = counts.progress;
+      document.getElementById("count-testing").textContent = counts.testing;
+      document.getElementById("count-await").textContent = counts.await;
+      document.getElementById("count-complete").textContent = counts.complete;
+    }
+    renderTasks();
+  </script>
+</body>
 </html>
