--- a/dashboard.html
+++ b/dashboard.html
@@ -4,125 +4,125 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CRM Dashboard</title>
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body, h1, h2, ul, li { margin:0; padding:0; font-family:'Poppins', sans-serif; }
-    body { background:#f4f8fb; color:#333; display:flex; flex-direction:column; min-height:100vh; }
+    body { background:#f4f8fb; color:#333; display:flex; height:100vh; overflow:hidden; }
     header { background:#fff; padding:15px 40px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
     .logo { font-size:20px; font-weight:700; color:#0d47a1; }
-    .container { display:flex; flex:1; }
-    nav.sidebar { width:220px; background:#fff; padding:20px; }
-    nav.sidebar button, nav.sidebar a { width:100%; text-align:left; padding:10px; font-weight:500; border:none; background:none; cursor:pointer; color:#333; }
-    nav.sidebar button:hover, nav.sidebar a:hover { background:#eceff1; }
-    .main { flex:1; padding:20px; }
+    .container-fluid { display:flex; flex:1; overflow:hidden; }
+    nav.sidebar { width:220px; background:#fff; overflow-y:auto; padding:20px; border-right:1px solid #e0e0e0; }
+    nav.sidebar button, nav.sidebar a { display:block; width:100%; padding:10px; text-align:left; color:#333; font-weight:500; background:none; border:none; cursor:pointer; }
+    nav.sidebar a:hover, nav.sidebar button:hover { background:#eceff1; }
+    .main-area { flex:1; padding:20px; overflow-y:auto; }
     .cards { display:flex; gap:20px; margin-bottom:20px; }
-    .card { background:#fff; padding:20px; flex:1; text-align:center; border-radius:6px; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
+    .card { background:#fff; flex:1; padding:20px; text-align:center; border-radius:6px; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
     table { width:100%; border-collapse:collapse; background:#fff; border-radius:6px; overflow:hidden; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
-    th, td { padding:12px; border-bottom:1px solid #eee; font-size:14px; }
+    th, td { padding:12px 15px; border-bottom:1px solid #eee; font-size:14px; }
     th { background:#fafafa; }
     tr:last-child td { border-bottom:none; }
-    .btn { padding:8px 14px; background:#0d47a1; color:#fff; border:none; border-radius:4px; cursor:pointer; }
-    .btn:hover { background:#1565c0; }
-    #modal { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.4); display:none; justify-content:center; align-items:center; }
-    #modal .dialog { background:#fff; padding:20px; width:320px; border-radius:6px; }
-    #modal input, #modal select { width:100%; margin:8px 0; padding:8px; border:1px solid #ccc; border-radius:4px; }
+    .btn-primary { background:#0d47a1; border:none; }
+    .btn-primary:hover { background:#1565c0; }
+    #taskModal .modal-content { font-family:'Poppins', sans-serif; }
   </style>
 </head>
 <body>
   <header><div class="logo">CRM Dashboard</div></header>
-  <div class="container">
+  <div class="container-fluid">
     <nav class="sidebar">
-      <button onclick="openModal()">+ New Task</button>
+      <button id="btnNewTask" class="btn btn-primary mb-3">+ New Task</button>
       <a href="#">Dashboard</a>
       <a href="#">Tasks</a>
       <a href="#">Leads</a>
       <a href="#">Inbox</a>
       <a href="#">Settings</a>
     </nav>
-    <div class="main">
-      <div class="cards">
-        <div class="card">Not Started<br><strong id="count-new">0</strong></div>
-        <div class="card">In Progress<br><strong id="count-progress">0</strong></div>
-        <div class="card">Testing<br><strong id="count-testing">0</strong></div>
-        <div class="card">Awaiting Feedback<br><strong id="count-await">0</strong></div>
-        <div class="card">Complete<br><strong id="count-complete">0</strong></div>
+    <div class="main-area">
+      <div class="row cards">
+        <div class="col card">Not Started<br><strong id="cntNew">0</strong></div>
+        <div class="col card">In Progress<br><strong id="cntProgress">0</strong></div>
+        <div class="col card">Testing<br><strong id="cntTesting">0</strong></div>
+        <div class="col card">Awaiting Feedback<br><strong id="cntAwait">0</strong></div>
+        <div class="col card">Complete<br><strong id="cntComplete">0</strong></div>
       </div>
-      <table>
-        <thead>
-          <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Priority</th></tr>
-        </thead>
-        <tbody id="taskTable"><tr><td colspan="6" style="text-align:center;">No tasks</td></tr></tbody>
-      </table>
-    </div>
-  </div>
-
-  <div id="modal">
-    <div class="dialog">
-      <h3>Create Task</h3>
-      <input type="text" id="taskName" placeholder="Task Name" />
-      <input type="date" id="taskStart" />
-      <input type="date" id="taskDue" />
-      <select id="taskStatus">
-        <option value="new">Not Started</option>
-        <option value="progress">In Progress</option>
-        <option value="testing">Testing</option>
-        <option value="await">Awaiting Feedback</option>
-        <option value="complete">Complete</option>
-      </select>
-      <select id="taskPriority">
-        <option>Low</option><option>Medium</option><option>High</option><option>Urgent</option>
-      </select>
-      <div style="text-align:right;">
-        <button onclick="addTask()" class="btn">Save</button>
-        <button onclick="closeModal()" class="btn" style="background:#aaa;margin-left:5px;">Cancel</button>
+      <div class="table-responsive">
+        <table class="table">
+          <thead class="table-light">
+            <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Priority</th><th>Actions</th></tr>
+          </thead>
+          <tbody id="taskBody"><tr><td colspan="7" class="text-center py-4">No tasks yet</td></tr></tbody>
+        </table>
       </div>
     </div>
   </div>
 
+  <!-- Task Modal -->
+  <div class="modal fade" id="taskModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">Create Task</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
+        <div class="modal-body">
+          <input id="tName" class="form-control mb-2" placeholder="Task Name">
+          <input id="tStart" type="date" class="form-control mb-2">
+          <input id="tDue" type="date" class="form-control mb-2">
+          <select id="tStatus" class="form-select mb-2">
+            <option>Not Started</option><option>In Progress</option><option>Testing</option><option>Awaiting Feedback</option><option>Complete</option>
+          </select>
+          <select id="tPriority" class="form-select mb-2">
+            <option>Low</option><option>Medium</option><option>High</option><option>Urgent</option>
+          </select>
+        </div>
+        <div class="modal-footer">
+          <button id="saveTask" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    let tasks = [];
-
-    function openModal() {
-      document.getElementById("modal").style.display = "flex";
-    }
-    function closeModal() {
-      document.getElementById("modal").style.display = "none";
-    }
-    function addTask() {
-      const name = document.getElementById("taskName").value.trim();
-      const start = document.getElementById("taskStart").value;
-      const due = document.getElementById("taskDue").value;
-      const status = document.getElementById("taskStatus").value;
-      const priority = document.getElementById("taskPriority").value;
-      if (!name || !start || !due) return alert("Fill all fields");
-      tasks.push({ name, start, due, status, priority });
+    const tasks = [];
+    document.getElementById('btnNewTask').onclick = () => new bootstrap.Modal(document.getElementById('taskModal')).show();
+    document.getElementById('saveTask').onclick = () => {
+      const t = {
+        name: tName.value.trim(),
+        start: tStart.value,
+        due: tDue.value,
+        status: tStatus.value,
+        priority: tPriority.value
+      };
+      if (!t.name || !t.start || !t.due) return alert('Please fill all required fields');
+      tasks.push(t);
       renderTasks();
       updateCounts();
-      closeModal();
-      document.getElementById("taskName").value = "";
+      bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
+      tName.value = '';
+    };
+    function renderTasks(){
+      const body = document.getElementById('taskBody');
+      body.innerHTML = tasks.length
+        ? tasks.map((t,i) => `
+            <tr>
+              <td>${i+1}</td>
+              <td>${t.name}</td>
+              <td><span class="badge bg-info">${t.status}</span></td>
+              <td>${t.start}</td>
+              <td>${t.due}</td>
+              <td>${t.priority}</td>
+              <td><button class="btn btn-sm btn-outline-primary">Edit</button></td>
+            </tr>`).join('')
+        : `<tr><td colspan="7" class="text-center py-4">No tasks yet</td></tr>`;
     }
-    function renderTasks() {
-      const tbody = document.getElementById("taskTable");
-      if (!tasks.length) return (tbody.innerHTML = '<tr><td colspan="6" style="text-align:center;">No tasks</td></tr>');
-      tbody.innerHTML = tasks.map((t,i) => `
-        <tr>
-          <td>${i+1}</td>
-          <td>${t.name}</td>
-          <td>${t.status}</td>
-          <td>${t.start}</td>
-          <td>${t.due}</td>
-          <td>${t.priority}</td>
-        </tr>`).join("");
-    }
-    function updateCounts() {
-      const counts = { new:0, progress:0, testing:0, await:0, complete:0 };
-      tasks.forEach(t => counts[t.status] ? counts[t.status]++ : null);
-      document.getElementById("count-new").textContent = counts.new;
-      document.getElementById("count-progress").textContent = counts.progress;
-      document.getElementById("count-testing").textContent = counts.testing;
-      document.getElementById("count-await").textContent = counts.await;
-      document.getElementById("count-complete").textContent = counts.complete;
+    function updateCounts(){
+      const counts = { "Not Started":0, "In Progress":0, "Testing":0, "Awaiting Feedback":0, "Complete":0 };
+      tasks.forEach(t => counts[t.status]++);
+      cntNew.textContent = counts["Not Started"];
+      cntProgress.textContent = counts["In Progress"];
+      cntTesting.textContent = counts["Testing"];
+      cntAwait.textContent = counts["Awaiting Feedback"];
+      cntComplete.textContent = counts["Complete"];
     }
     renderTasks();
   </script>
